--- a/optimizator.ipynb
+++ b/optimizator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "\n",
     "from scipy.spatial import distance\n",
+    "from scipy.optimize import minimize\n",
     "\n",
     "import joblib\n",
     "\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +31,7 @@
        " 'n': {'n': 1.45, 'c': 1.47, 'o': 1.43, 'h': 1.01}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,196 +44,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>H</th>\n",
-       "      <th>C</th>\n",
-       "      <th>H</th>\n",
-       "      <th>C</th>\n",
-       "      <th>O</th>\n",
-       "      <th>H</th>\n",
-       "      <th>H</th>\n",
-       "      <th>H</th>\n",
-       "      <th>H</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>O</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       H      C      H      C      O      H      H      H      H\n",
-       "H  False   True  False  False  False  False  False  False  False\n",
-       "C   True  False   True   True  False  False  False  False   True\n",
-       "H  False   True  False  False  False  False  False  False  False\n",
-       "C  False   True  False  False   True   True  False   True  False\n",
-       "O  False  False  False   True  False  False   True  False  False\n",
-       "H  False  False  False   True  False  False  False  False  False\n",
-       "H  False  False  False  False   True  False  False  False  False\n",
-       "H  False  False  False   True  False  False  False  False  False\n",
-       "H  False   True  False  False  False  False  False  False  False"
+       "0.062286068720076485"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def create_bond_matrix(df, r_c, tol=0.2):\n",
-    "    coords = df[['x', 'y', 'z']].values\n",
-    "    atoms = df['atom'].values\n",
+    "class Molecule:\n",
+    "    def __init__(self, df, r_c, k_E_r=100):\n",
+    "        self.df = df\n",
+    "        self.r_c = r_c\n",
+    "        self.create_bond_matrix()\n",
+    "        self.create_distance_mask()\n",
+    "        self.k_E_r = k_E_r\n",
     "\n",
-    "    dist_matrix = distance.cdist(coords, coords, 'euclidean')\n",
-    "    bond_matrix = np.zeros(dist_matrix.shape, dtype=bool)\n",
+    "    def create_bond_matrix(self, tol=0.2):\n",
+    "        coords = self.df[['x', 'y', 'z']].values\n",
+    "        atoms = self.df['atom'].values\n",
     "\n",
-    "    n = len(atoms)\n",
-    "    for i in range(n):\n",
-    "        for j in range(i+1, n):  # Only need to consider half the matrix\n",
-    "            atom_i = atoms[i].lower()\n",
-    "            atom_j = atoms[j].lower()\n",
+    "        dist_matrix = distance.cdist(coords, coords, 'euclidean')\n",
+    "        bond_matrix = np.zeros(dist_matrix.shape, dtype=bool)\n",
     "\n",
-    "            # Ensure we have bond length data for these atoms\n",
-    "            if atom_i in r_c and atom_j in r_c[atom_i]:\n",
-    "                if abs(dist_matrix[i, j] - r_c[atom_i][atom_j]) < tol:\n",
-    "                    bond_matrix[i, j] = bond_matrix[j, i] = True  # Atoms are likely bonded\n",
+    "        n = len(atoms)\n",
+    "        for i in range(n):\n",
+    "            for j in range(i+1, n):  # Only need to consider half the matrix\n",
+    "                atom_i = atoms[i].lower()\n",
+    "                atom_j = atoms[j].lower()\n",
     "\n",
-    "    df_bonds = pd.DataFrame(bond_matrix, index=atoms, columns=atoms)\n",
+    "                # Ensure we have bond length data for these atoms\n",
+    "                if atom_i in self.r_c and atom_j in self.r_c[atom_i]:\n",
+    "                    if abs(dist_matrix[i, j] - self.r_c[atom_i][atom_j]) < tol:\n",
+    "                        bond_matrix[i, j] = bond_matrix[j, i] = True  # Atoms are likely bonded\n",
+    "        self.df_bonds = pd.DataFrame(bond_matrix, index=atoms, columns=atoms)\n",
     "\n",
-    "    return df_bonds\n",
+    "    def create_distance_mask(self):\n",
+    "        atoms = self.df['atom'].values\n",
+    "        n = len(atoms)\n",
     "\n",
-    "create_bond_matrix(df, r_c)"
+    "        dist_mask = np.zeros((n, n), dtype=float)\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            for j in range(i+1, n):  # Only need to consider half the matrix\n",
+    "                atom_i = atoms[i].lower()\n",
+    "                atom_j = atoms[j].lower()\n",
+    "\n",
+    "                # Ensure we have bond length data for these atoms\n",
+    "                if atom_i in self.r_c and atom_j in self.r_c[atom_i]:\n",
+    "                    dist_mask[i, j] = dist_mask[j, i] = self.r_c[atom_i][atom_j]\n",
+    "\n",
+    "        self.df_dist_mask = pd.DataFrame(dist_mask, index=atoms, columns=atoms)\n",
+    "\n",
+    "    def energy_distance(self, coords):\n",
+    "        # coords = self.df[['x', 'y', 'z']].values\n",
+    "        coords = coords.reshape(df[['x', 'y', 'z']].shape)\n",
+    "        dist_matrix = distance.cdist(coords, coords, 'euclidean')\n",
+    "        return np.sum(self.k_E_r * (dist_matrix - self.df_dist_mask.values) ** 2 \\\n",
+    "                      * self.df_bonds.values) / 2\n",
+    "\n",
+    "\n",
+    "ethanol = Molecule(df, r_c)\n",
+    "ethanol.df_bonds\n",
+    "ethanol.energy_distance(ethanol.df[['x', 'y', 'z']].values.flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-2.07873172,  0.4328589 ,  0.07216627, -1.2203252 , -0.23396007,\n",
+       "        -0.00901677, -1.26462523, -0.95287648,  0.80908878,  0.09534658,\n",
+       "         0.56396543,  0.05361414,  1.22833655, -0.27287322, -0.12648248,\n",
+       "         0.14876096,  1.11753864,  0.99105939,  1.2473821 , -0.8990527 ,\n",
+       "         0.61408252,  0.13183892,  1.28388441, -0.76399516, -1.27362396,\n",
+       "        -0.7747082 , -0.95392455]),\n",
+       " 2.1578724683049923e-14)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_minima(f, initial_guess):\n",
+    "    result = minimize(f, initial_guess, method='trust-constr')\n",
+    "    if result.success:\n",
+    "        return result.x, result.fun\n",
+    "    else:\n",
+    "        raise Exception(\"The optimization process was not successful.\")\n",
+    "    \n",
+    "find_minima(ethanol.energy_distance, ethanol.df[['x', 'y', 'z']].values.flatten())"
    ]
   }
  ],
