--- a/optimizator.ipynb
+++ b/optimizator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "\n",
     "from scipy.spatial import distance\n",
     "from scipy.optimize import minimize\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import AllChem\n",
     "\n",
     "import joblib\n",
     "\n",
@@ -19,19 +21,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>atom</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>atomnum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-2.080143</td>\n",
+       "      <td>0.432973</td>\n",
+       "      <td>0.072282</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C</td>\n",
+       "      <td>-1.212970</td>\n",
+       "      <td>-0.229529</td>\n",
+       "      <td>-0.009716</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-1.265591</td>\n",
+       "      <td>-0.953986</td>\n",
+       "      <td>0.809795</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>0.084976</td>\n",
+       "      <td>0.559039</td>\n",
+       "      <td>0.051055</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>O</td>\n",
+       "      <td>1.232231</td>\n",
+       "      <td>-0.273190</td>\n",
+       "      <td>-0.127612</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>H</td>\n",
+       "      <td>0.150614</td>\n",
+       "      <td>1.120025</td>\n",
+       "      <td>0.994302</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>H</td>\n",
+       "      <td>1.247388</td>\n",
+       "      <td>-0.899874</td>\n",
+       "      <td>0.615068</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H</td>\n",
+       "      <td>0.131609</td>\n",
+       "      <td>1.284181</td>\n",
+       "      <td>-0.764522</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-1.273754</td>\n",
+       "      <td>-0.774863</td>\n",
+       "      <td>-0.954059</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'c': {'h': 1.09, 'c': 1.54, 'o': 1.42, 'n': 1.47},\n",
-       " 'o': {'h': 0.97, 'c': 1.42, 'n': 1.43, 'o': 1.48},\n",
-       " 'h': {'h': 0.74, 'c': 1.09, 'n': 1.01, 'o': 0.97},\n",
-       " 'n': {'n': 1.45, 'c': 1.47, 'o': 1.43, 'h': 1.01}}"
+       "  atom         x         y         z  atomnum\n",
+       "0    H -2.080143  0.432973  0.072282        1\n",
+       "1    C -1.212970 -0.229529 -0.009716        2\n",
+       "2    H -1.265591 -0.953986  0.809795        3\n",
+       "3    C  0.084976  0.559039  0.051055        4\n",
+       "4    O  1.232231 -0.273190 -0.127612        5\n",
+       "5    H  0.150614  1.120025  0.994302        6\n",
+       "6    H  1.247388 -0.899874  0.615068        7\n",
+       "7    H  0.131609  1.284181 -0.764522        8\n",
+       "8    H -1.273754 -0.774863 -0.954059        9"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,21 +150,135 @@
    "source": [
     "df = xyz_to_df('ethanol.xyz')\n",
     "r_c = joblib.load('r_c.pkl')\n",
-    "r_c"
+    "r_c\n",
+    "df['atomnum'] = np.arange(1, df.shape[0]+1)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>atom</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>charge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-2.080</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>0.025373291592356649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C</td>\n",
+       "      <td>-1.213</td>\n",
+       "      <td>-0.230</td>\n",
+       "      <td>-0.010</td>\n",
+       "      <td>-0.041838486154772384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-1.266</td>\n",
+       "      <td>-0.954</td>\n",
+       "      <td>0.810</td>\n",
+       "      <td>0.025373291592356649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>0.559</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.040220581749086423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>O</td>\n",
+       "      <td>1.232</td>\n",
+       "      <td>-0.273</td>\n",
+       "      <td>-0.128</td>\n",
+       "      <td>-0.39666371478125978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>H</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>1.120</td>\n",
+       "      <td>0.994</td>\n",
+       "      <td>0.056069718921006324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>H</td>\n",
+       "      <td>1.247</td>\n",
+       "      <td>-0.900</td>\n",
+       "      <td>0.615</td>\n",
+       "      <td>0.21002230656786322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H</td>\n",
+       "      <td>0.132</td>\n",
+       "      <td>1.284</td>\n",
+       "      <td>-0.765</td>\n",
+       "      <td>0.056069718921006324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>H</td>\n",
+       "      <td>-1.274</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.954</td>\n",
+       "      <td>0.025373291592356649</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.062286068720076485"
+       "  atom      x      y      z                 charge\n",
+       "0    H -2.080  0.433  0.072   0.025373291592356649\n",
+       "1    C -1.213 -0.230 -0.010  -0.041838486154772384\n",
+       "2    H -1.266 -0.954  0.810   0.025373291592356649\n",
+       "3    C  0.085  0.559  0.051   0.040220581749086423\n",
+       "4    O  1.232 -0.273 -0.128   -0.39666371478125978\n",
+       "5    H  0.151  1.120  0.994   0.056069718921006324\n",
+       "6    H  1.247 -0.900  0.615    0.21002230656786322\n",
+       "7    H  0.132  1.284 -0.765   0.056069718921006324\n",
+       "8    H -1.274 -0.775 -0.954   0.025373291592356649"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +291,43 @@
     "        self.create_bond_matrix()\n",
     "        self.create_distance_mask()\n",
     "        self.k_E_r = k_E_r\n",
+    "        self.create_pdb_string()\n",
+    "        self.create_rdkitmol()\n",
+    "        self.new_df()\n",
+    "        self.conj_matrix()\n",
+    "    \n",
+    "    def new_df(self):\n",
+    "        conf = self.rdkit_mol.GetConformer()\n",
+    "        \n",
+    "        self.rdkit_df = pd.DataFrame([[atom.GetSymbol(), conf.GetAtomPosition(cnt).x, conf.GetAtomPosition(cnt).y, conf.GetAtomPosition(cnt).z,\n",
+    "        atom.GetProp(\"_GasteigerCharge\")] for cnt, atom in enumerate(ethanol.rdkit_mol.GetAtoms())], columns = ['atom', 'x', 'y', 'z', 'charge'])\n",
+    "\n",
+    "    def conj_matrix(self):\n",
+    "        n_atoms = mol.GetNumAtoms()\n",
+    "\n",
+    "        # Создайте пустую матрицу связности\n",
+    "        adj_matrix = np.zeros((n_atoms, n_atoms))\n",
+    "\n",
+    "        # Заполните верхний треугольник матрицы связности\n",
+    "        for atom in mol.GetAtoms():\n",
+    "            for neighbor in atom.GetNeighbors():\n",
+    "                idx1 = atom.GetIdx()\n",
+    "                idx2 = neighbor.GetIdx()\n",
+    "                if idx1 < idx2:  # только для верхнего треугольника\n",
+    "                    adj_matrix[idx1, idx2] = 1\n",
+    "\n",
+    "        self.adj_matrix = adj_matrix\n",
+    "\n",
+    "    def create_pdb_string(self):\n",
+    "        self.pdb_string = '\\n'.join(self.df.apply(lambda x: 'ATOM  {:5d}  {:^4s}MOL     1    {:8.3f}{:8.3f}{:8.3f}  1.00  0.00          {:>2s} '\n",
+    "                 .format(x['atomnum'], x['atom'], x['x'], x['y'], x['z'], x['atom']), axis=1).values)\n",
+    "        \n",
+    "    def create_rdkitmol(self):\n",
+    "        self.rdkit_mol = Chem.MolFromPDBBlock(self.pdb_string, removeHs=False)\n",
+    "\n",
+    "    def calc_charge(self):\n",
+    "        AllChem.ComputeGasteigerCharges(self.rdkit_mol)\n",
+    "\n",
     "\n",
     "    def create_bond_matrix(self, tol=0.2):\n",
     "        coords = self.df[['x', 'y', 'z']].values\n",
@@ -102,7 +364,7 @@
     "                    dist_mask[i, j] = dist_mask[j, i] = self.r_c[atom_i][atom_j]\n",
     "\n",
     "        self.df_dist_mask = pd.DataFrame(dist_mask, index=atoms, columns=atoms)\n",
-    "\n",
+    "    \n",
     "    def energy_distance(self, coords):\n",
     "        # coords = self.df[['x', 'y', 'z']].values\n",
     "        coords = coords.reshape(df[['x', 'y', 'z']].shape)\n",
@@ -112,13 +374,14 @@
     "\n",
     "\n",
     "ethanol = Molecule(df, r_c)\n",
-    "ethanol.df_bonds\n",
-    "ethanol.energy_distance(ethanol.df[['x', 'y', 'z']].values.flatten())"
+    "ethanol.calc_charge()\n",
+    "ethanol.rdkit_mol\n",
+    "ethanol.rdkit_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +396,7 @@
        " 2.1578724683049923e-14)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
